# docs/swagger.json
@@ -15,6 +15,30 @@
         "version": "1.0"
     },
     "paths": {
+        "/index": {
+            "get": {
+                "description": "Returns a user's information in JSON format",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Get user information",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/site": {
             "get": {
                 "description": "get site page.",
