# main.go
@@ -16,7 +16,7 @@ import (
 	"os"
 	"strconv"
 	"time"
-
+	"site_controller/controller"
 	// docs are generated by Swag CLI, you have to import them.
 	_ "microdata/kemendagri/sipd/service/boilerplate_go/docs" // load API Docs files (Swagger)
 )
@@ -54,6 +54,10 @@ func init() {
 		exitf("DB_SERVER_URL config is required")
 	}
 }
+siteCtl := controllers.NewSiteController(timeoutContext)
+
+app.Get("/index", siteCtl.Index)
+
 
 func dbConnection() {
 	var maxConnLifetime, maxConnIdleTime time.Duration
